--- a/client/src/pages/loginPage/auth.scss
+++ b/client/src/pages/loginPage/auth.scss
@@ -13,7 +13,7 @@
     align-items: center;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-
+    min-width: 360px;
   }
 
   &__inner {
