add new components

--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -21,4 +21,13 @@
     flex: 1;
     justify-content: end;
   }
+
+  .ant-menu-item-selected {
+    background-color: transparent !important;
+    color: inherit !important;
+  }
+
+  a.active {
+    // background-color: red;
+  }
 }
